Simplify Color stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(Sigmoid)
 
 set(CMAKE_CXX_STANDARD 20)
 
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    add_definitions(-O3)
+    add_definitions(-funroll-loops)
+endif()
+
 add_executable(Sigmoid src/main.cpp)
