--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,13 @@ project(Sigmoid)
 
 set(CMAKE_CXX_STANDARD 20)
 
-if(CMAKE_BUILD_TYPE STREQUAL "Release")
-    add_definitions(-O3)
-    add_definitions(-funroll-loops)
+add_executable(Sigmoid src/main.cpp)
+
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
+    target_compile_options(Sigmoid PRIVATE -O3 -funroll-loops)
 endif()
 
-add_executable(Sigmoid src/main.cpp)
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(Sigmoid PRIVATE -Wall -pedantic -fsanitize=address)
+    target_link_options(Sigmoid PRIVATE -fsanitize=address)
+endif()
