--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.30)
+cmake_minimum_required(VERSION 3.25)
 project(Sigmoid)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -11,12 +11,10 @@ target_link_options(Sigmoid PRIVATE -pthread)
 target_compile_options(Sigmoid PRIVATE -Wall -pedantic)
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
-    target_compile_options(Sigmoid PRIVATE -O3 -funroll-loops)
-    target_compile_definitions(Sigmoid PRIVATE $<$<CONFIG:Release>:UNDEBUG>)
-
-endif()
+    target_compile_options(Sigmoid PRIVATE -O3)
+endif ()
 
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    target_compile_options(Sigmoid PRIVATE -fsanitize=address)
-    target_link_options(Sigmoid PRIVATE -fsanitize=address)
+    target_compile_options(Sigmoid PRIVATE -fsanitize=address -g)
+    target_link_options(Sigmoid PRIVATE -fsanitize=address -g)
 endif()
